[package]
name = "uir"
version = "0.1.0"
authors = ["noxabellus <noxabellus@gmail.com>"]
edition = "2018"

[lib]
path = "./lib.rs"

[dependencies]
support = { package = "uir-support", path = "./support" }
core = { package = "uir-core", path = "./core" }
llvm-backend = { package = "uir-llvm-backend", path = "./backends/llvm", optional = true }


[workspace]
members = [ "./support", "./core", "./backends/llvm" ]